--- a/milk.html
+++ b/milk.html
@@ -1,100 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Milk</title>
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <!-- Bootstrap core JS-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <style>
-        .cus {
-            width: 100%;
-            margin-top: 5px;
-        }
-    </style>
-    <script>
-        $(function () {
-            //Cold Water Temperatur
-            var target_cwt = document.getElementById("CT");
-            for (let i = 0; i <= 100; i++) {
-                let opt = document.createElement("option");
-                if (i == 25) opt.selected = true;
-                opt.innerHTML = i;
-                target_cwt.appendChild(opt);
-            }
-            //Hot Water Temperature
-            var target_hwt = document.getElementById("HT");
-            for (let i = 100; i >= 0; i--) {
-                let opt = document.createElement("option");
-                if (i == 80) opt.selected = true;
-                opt.innerHTML = i;
-                target_hwt.appendChild(opt);
-            }
-            //Total
-            var target_t = document.getElementById("T");
-            for (let i = 10; i <= 400; i += 10) {
-                let opt = document.createElement("option");
-                if (i == 150) opt.selected = true;
-                opt.innerHTML = i;
-                target_t.appendChild(opt);
-            }
-            //Target Temperature
-            var target_tt = document.getElementById("TT");
-            for (let i = 0; i <= 100; i++) {
-                let opt = document.createElement("option");
-                if (i == 70) opt.selected = true;
-                opt.innerHTML = i;
-                target_tt.appendChild(opt);
-            }
-        })
-
-        function cal() {
-            var c = $("#CT").val();
-            var h = $("#HT").val();
-            var t = $("#T").val();
-            var tt = $("#TT").val();
-
-            document.getElementById("result").innerHTML = `
-            <div class="text-primary font-weight-bold h2">
-                Cold Water: ${Round(t * (tt - h) / (c - h), 2)} ml
-            </div>
-            <div class="text-danger font-weight-bold h2">
-                Hot Water: ${Round(t * (tt - c) / (h - c), 2)} ml
-            </div>
-            `;
-        }
-
-        function Round(number, decimalpoint) {
-            if (!number) return number;
-            var dp = Math.pow(10, decimalpoint);
-            return Math.round(number * dp) / dp;
-        }
-    </script>
-</head>
-
-<body>
-    <div class="col-lg-12">
-        <h2>Milk Calculator</h2>
-        Cold Water Temperature(°C)
-        <select class="form-control" type="number" id="CT"></select>
-        Hot Water Temperature(°C)
-        <select class="form-control" type="number" id="HT"></select>
-        How much water do you need?(ml)
-        <select class="form-control" type="number" id="T"></select>
-        Target Temperature(°C)
-        <select class="form-control" type="number" value=70 id="TT"></select>
-
-        <button class="btn btn-sm btn-success cus" onclick=cal()>Calculate</button>
-        <div id="result">
-        </div>
-    </div>
-
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="description" content=""/><meta name="author" content=""/><title>Milk</title><link href="css/styles.css" rel="stylesheet"/><script src="js/jquery.min.js"></script><script src="js/bootstrap.bundle.min.js"></script><style>.cus{width:100%;margin-top:5px}</style></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,l,i=r[0],f=r[1],a=r[2],c=0,s=[];c<i.length;c++)l=i[c],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(p&&p(r);s.length;)s.shift()();return u.push.apply(u,a||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,i=1;i<t.length;i++){var f=t[i];0!==o[f]&&(n=!1)}n&&(u.splice(r--,1),e=l(l.s=t[0]))}return e}var n={},o={1:0},u=[];function l(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,l),t.l=!0,t.exports}l.m=e,l.c=n,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,r){if(1&r&&(e=l(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)l.d(t,n,function(r){return e[r]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/";var i=this.webpackJsonpmilk=this.webpackJsonpmilk||[],f=i.push.bind(i);i.push=r,i=i.slice();for(var a=0;a<i.length;a++)r(i[a]);var p=f;t()}([])</script><script src="/static/js/2.748e20d2.chunk.js"></script><script src="/static/js/main.60135013.chunk.js"></script></body></html>
